# Euchre-cpp

./: CMakeLists.txt  LICENSE  README.md  gtest.cmake
src/: Card.cpp  Card.hpp  Game.cpp  Game.hpp  Player.cpp  Player.hpp  main.cpp
test/: test.cpp
